Added default variables.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,2 +1,10 @@
 ---
 # defaults file for consensus.composer-update
+
+composer_update_git_url: "git@gitlab.example.com:foo/bar.git"
+composer_update_git_clone_branch: "master"
+composer_update_git_push_branch: "composer-updates"
+composer_update_temp_dir: "/tmp"
+composer_update_dest_dir: "{{ composer_update_temp_dir }}/composer-update-{{ ansible_date_time.iso8601 }}"
+composer_update_packages: "foo/bar foo/baz"
+composer_update_options: "--with-dependencies"
