--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,11 +1,12 @@
 galaxy_info:
-  author: your name
-  description: your description
-  company: your company (optional)
+  role_name: composer-update
+  author: Colan Schwartz
+  description: Takes a Composer-based Git repository branch, updates it, and then pushes to the same (or another) branch.
+  company: Consensus Enterprises
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
-  # issue_tracker_url: http://example.com/issue/tracker
+  issue_tracker_url: https://gitlab.com/consensus.enterprises/ansible-roles/ansible-role-composer-update/-/boards
 
   # Some suggested licenses:
   # - BSD (default)
@@ -14,7 +15,7 @@ galaxy_info:
   # - GPLv3
   # - Apache
   # - CC-BY
-  license: license (GPLv2, CC-BY, etc)
+  license: AGPLv3
 
   min_ansible_version: 2.4
 
@@ -35,26 +36,27 @@ galaxy_info:
   # To view available platforms and versions (or releases), visit:
   # https://galaxy.ansible.com/api/v1/platforms/
   #
-  # platforms:
-  # - name: Fedora
-  #   versions:
-  #   - all
-  #   - 25
-  # - name: SomePlatform
-  #   versions:
-  #   - all
-  #   - 1.0
-  #   - 7
-  #   - 99.99
+  platforms:
+  - name: Debian
+    versions:
+    - all
+  - name: Ubuntu
+    versions:
+    - all
 
-  galaxy_tags: []
+  galaxy_tags:
     # List tags for your role here, one per line. A tag is a keyword that describes
     # and categorizes the role. Users find roles by searching for tags. Be sure to
     # remove the '[]' above, if you add tags to this list.
     #
     # NOTE: A tag is limited to a single word comprised of alphanumeric characters.
     #       Maximum 20 tags per role.
+    - php
+    - composer
+    - git
 
 dependencies: []
   # List your role dependencies here, one per line. Be sure to remove the '[]' above,
   # if you add dependencies to this list.
+
+  # See `roles/requirements.yml`.
