Allowed for additional files to be committed alongside `composer.lock`.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,10 +6,6 @@ composer_update_git_url: "git@gitlab.example.com:foo/bar.git"
 composer_update_git_clone_branch: "dev"
 composer_update_git_push_branch: "{{ composer_update_git_clone_branch }}"
 
-# Commit metadata.
-composer_update_issue_id: "???"
-composer_update_git_commit_msg: "Issue #{{ composer_update_issue_id }}: Brought Composer's lock file up-to-date."
-
 # Directory paths.
 composer_update_temp_dir: "/tmp"
 composer_update_dest_dir: "{{ composer_update_temp_dir }}/composer-update-{{ ansible_date_time.iso8601 }}"
@@ -17,3 +13,8 @@ composer_update_dest_dir: "{{ composer_update_temp_dir }}/composer-update-{{ ans
 # Composer update command options.
 composer_update_packages: "foo/bar foo/baz"
 composer_update_options: "--with-dependencies"
+
+# Commit metadata.
+composer_update_issue_id: "???"
+composer_update_git_commit_msg: "Issue #{{ composer_update_issue_id }}: Brought Composer's lock file up-to-date."
+composer_update_git_additions: ""
